# uclasm

./: .gitignore  .readthedocs.yml  LICENSE  README.md  environment.yml  example.py  plot_erdos_renyi_results.py  pyproject.toml  run_erdos_renyi.py  setup.py
benchmark/: bench.py  run_erdos_renyi.py  run_solvers.py
benchmark/pathLAD/: Makefile  allDiff.c  domainsPath.c  graph.c  lad.c  main  main.c  target.txt
docs/: Makefile
docs/source/: citing.rst  conf.py  index.rst  installation.rst  license.rst  tutorial.rst
docs/source/reference/: graph.rst  index.rst  lsap.rst  matching_problems.rst  readwrite.rst  utils.rst
examples/: README.md  count_isomorphisms.py  generate_data.py  load_data_combo.py  load_data_edgelist.py  load_data_separate.py
examples/example_data_files/: example_combo.csv  example_edgelist.csv  example_nodelist.csv
experiments/: plot_erdos_renyi_results.py  plot_sudoku.py  plot_sudoku_times.py  run_erdos_renyi.py  run_sudoku.py  sudoku-easy50.txt  sudoku-hardest.txt  sudoku-top95.txt
experiments/plotting/: plot_candidates.py
plotting/: plot_barcharts.py
tests/: test_cost_bounds.py  test_counting.py  test_edgewise.py  test_equivalence.py  test_exact_matching.py  test_filters.py  test_readwrite.py  test_search.py  test_uclasm.py  test_utils.py
tests/test_readwrite/: aids.igraph  world.csv
tutorial/: main.py  template.csv
uclasm/: __init__.py  convert.py  graph.py  graph_viz.py  interface.py  readwrite.py  utils.py
uclasm/counting/: __init__.py  alldiffs.py  has_isomorphism.py  isomorphisms.py
uclasm/equivalence/: __init__.py  equivalence_data_structure.py  multichannel_structural_equivalence.py  partition_equivalence_vertices.py  partition_sparse.py
uclasm/filters/: __init__.py  all_filters.py  elimination_filter.py  label_filter.py  neighborhood_filter.py  permutation_filter.py  run_filters.py  stats_filter.py  topology_filter.py  validation_filter.py
uclasm/matching/: __init__.py  lsap.py  matching_problem.py  matching_utils.py
uclasm/matching/cost_bounds/: __init__.py  edgewise_cost_bound.py  (+1 more)
uclasm/utils/: __init__.py  data_loaders.py  data_structures.py  graph.py  graph_io.py  graph_ops.py  misc.py  summarize.py  utils.py
(+22 files in other folders)
