[tool.poetry]
name = "ucla-subgraph-matching"
version = "0.1.4"
description = ""
authors = ["Jacob Moorman <jacob@moorman.me>",
           "Thomas Tu",
           "Qinyi Chen",
           "Xie He",
           "Dominic Yang"]
license  = "MIT"
readme = "README.md"
repository = "https://github.com/jdmoorman/uclasm"
packages = [
    { include = "uclasm" }
]

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.18.1"
scipy = "^1.4.1"
pandas = "^1.0.1"
networkx = "^2.4"
dask = {version = "^2.12.0", extras = ["complete"]}
loguru = "^0.4.1"
tqdm = "^4.43.0"
numba = "^0.48.0"
lazy-property = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sphinx = "1.8.5"
recommonmark = "^0.6.0"
sphinx_rtd_theme = "^0.4.3"
bump2version = "^1.0.0"
pytest-cov = "^2.8.1"
mlflow = "^1.6.0"
sphinx-autobuild = "^0.7.1"
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
