[tool.poetry]
name = "ucla-subgraph-matching"
version = "0.1.4"
description = ""
authors = ["Jacob Moorman <jacob@moorman.me>",
           "Thomas Tu",
           "Qinyi Chen",
           "Xie He",
           "Dominic Yang"]
license  = "MIT"
readme = "README.md"
repository = "https://github.com/jdmoorman/uclasm"
packages = [
    { include = "uclasm" }
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
scipy = "^1.4.1"
pandas = "^1.0.1"
networkx = "^2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sphinx = "^2.4.2"
recommonmark = "^0.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
